[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LoginScreen"]
margin_right = 984.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 1
text = "Game Name"
align = 1
valign = 1

[node name="UserName" type="HBoxContainer" parent="LoginScreen"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 78.0
size_flags_vertical = 0

[node name="UserNameLabel" type="Label" parent="LoginScreen/UserName"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
size_flags_horizontal = 0
text = "Name: "

[node name="UserNameLineEdit" type="LineEdit" parent="LoginScreen/UserName"]
margin_left = 50.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Player"

[node name="JoinButton" type="Button" parent="LoginScreen"]
margin_left = 447.0
margin_top = 82.0
margin_right = 537.0
margin_bottom = 102.0
size_flags_horizontal = 4
text = "JOIN SERVER"

[node name="JoinButton2" type="Button" parent="LoginScreen"]
margin_left = 445.0
margin_top = 106.0
margin_right = 538.0
margin_bottom = 126.0
size_flags_horizontal = 4
text = "LOCAL HOST"

[node name="MainLobby" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainLobby"]
anchor_right = 1.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="MainLobby/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Status" type="Label" parent="MainLobby/VBoxContainer/TopBar"]
margin_right = 408.0
margin_bottom = 14.0
size_flags_horizontal = 3
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MainLobby/VBoxContainer/TopBar"]
margin_left = 412.0
margin_right = 820.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "chat"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="MainLobby/VBoxContainer/TopBar"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )
text = "Player List"
align = 1
valign = 2
uppercase = true

[node name="MainBox" type="HBoxContainer" parent="MainLobby/VBoxContainer"]
margin_top = 14.0
margin_right = 1024.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="MainLobby/VBoxContainer/MainBox"]
margin_right = 412.0
margin_bottom = 585.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainLobby/VBoxContainer/MainBox/LeftBox"]
margin_right = 412.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer"]
margin_right = 412.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyList" type="ItemList" parent="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/ScrollContainer"]
margin_right = 412.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
allow_rmb_select = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer"]
margin_top = 565.0
margin_right = 412.0
margin_bottom = 585.0
size_flags_horizontal = 3

[node name="ButtonHost" type="Button" parent="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "HOST"

[node name="ButtonMatch" type="Button" parent="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 412.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "FIND A MATCH"

[node name="CenterBox" type="VBoxContainer" parent="MainLobby/VBoxContainer/MainBox"]
margin_left = 412.0
margin_right = 824.0
margin_bottom = 585.0
size_flags_horizontal = 3

[node name="ChatBox" type="TextEdit" parent="MainLobby/VBoxContainer/MainBox/CenterBox"]
margin_right = 412.0
margin_bottom = 557.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainLobby/VBoxContainer/MainBox/CenterBox"]
margin_top = 561.0
margin_right = 412.0
margin_bottom = 585.0
custom_constants/separation = 3

[node name="ChatEdit" type="LineEdit" parent="MainLobby/VBoxContainer/MainBox/CenterBox/HBoxContainer"]
margin_right = 363.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true

[node name="SendButton" type="Button" parent="MainLobby/VBoxContainer/MainBox/CenterBox/HBoxContainer"]
margin_left = 366.0
margin_top = 2.0
margin_right = 412.0
margin_bottom = 22.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SEND"

[node name="RightBox" type="VBoxContainer" parent="MainLobby/VBoxContainer/MainBox"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 585.0
rect_min_size = Vector2( 200, 585 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MainLobby/VBoxContainer/MainBox/RightBox"]
margin_right = 200.0
margin_bottom = 585.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserList" type="ItemList" parent="MainLobby/VBoxContainer/MainBox/RightBox/ScrollContainer"]
margin_right = 200.0
margin_bottom = 585.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameLobby" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="GameLobby"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyName" type="Label" parent="GameLobby/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 14.0
text = "room id"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="GameLobby/VBoxContainer2"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="PlayerList" type="ItemList" parent="GameLobby/VBoxContainer2/HBoxContainer2"]
margin_right = 1024.0
margin_bottom = 558.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameLobby/VBoxContainer2/HBoxContainer2/PlayerList"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "0/5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameLobby/VBoxContainer2"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="GameLobby/VBoxContainer2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "LEAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="GameLobby/VBoxContainer2/HBoxContainer"]
visible = false
margin_left = 102.0
margin_right = 194.0
margin_bottom = 20.0
text = "START GAME"

[node name="Ready" type="Button" parent="GameLobby/VBoxContainer2/HBoxContainer"]
margin_left = 54.0
margin_right = 107.0
margin_bottom = 20.0
text = "READY"
[connection signal="pressed" from="LoginScreen/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="LoginScreen/JoinButton2" to="." method="_on_JoinButton2_pressed"]
[connection signal="item_activated" from="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/ScrollContainer/LobbyList" to="." method="_on_LobbyList_item_activated"]
[connection signal="pressed" from="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/HBoxContainer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="MainLobby/VBoxContainer/MainBox/LeftBox/VBoxContainer/HBoxContainer/ButtonMatch" to="." method="_on_ButtonMatch_pressed"]
[connection signal="pressed" from="MainLobby/VBoxContainer/MainBox/CenterBox/HBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="pressed" from="GameLobby/VBoxContainer2/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="GameLobby/VBoxContainer2/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="GameLobby/VBoxContainer2/HBoxContainer/Ready" to="." method="_on_Ready_pressed"]
